--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -11,6 +11,8 @@ body {
 .App {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
   .login-container {
     position: absolute;
     height: 500px;
@@ -138,6 +140,26 @@ body {
     .switch:hover {
       cursor: pointer;
       background-color: white;
+    }
+  }
+
+  .heading {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: #30475e;
+    height: 62px;
+    h1 {
+      margin-left: 2.5%;
+      line-height: 62px;
+    }
+    h2 {
+      line-height: 62px;
+      margin-right: 2.5%;
+    }
+    h2:hover {
+      cursor: pointer;
+      color: #f05454;
     }
   }
 }
